# replicated_counter

./: .gitignore  CMakeLists.txt  Counter.cc  Counter.h  CounterApplication.cc  CounterApplication.h  CounterEntry.pb.cc  CounterEntry.pb.h  DockerFile  DurableLog.h  MetadataConfig.pb.cc  MetadataConfig.pb.h  README.md  Sequencer.cc  Sequencer.h  StateMachine.h  VectorBasedDurableLog.cc  VectorBasedDurableLog.h  main.cpp  makefile  prometheus.yml
.github/workflows/: cmake.yml
applications/: CounterAppEnsembleNode.h  Ensemble.h  EnsembleNode.h  main.cc
applications/counter/: CounterApp.cc  CounterApp.h  CounterAppEnsembleNode.h  CounterAppServer.h  CounterAppStateMachine.cc  CounterAppStateMachine.h  CounterApplicator.cc  CounterApplicator.h  CounterEntry.pb.cc  CounterEntry.pb.h  CounterHealthCheck.cc  CounterHealthCheck.h  main.cc
applications/counter/client/: CounterAppClient.cc  CounterAppClient.h
applications/counter/proto/: CounterEntry.proto
applications/counter/server/: CounterAppServer.h
applications/counter/test/: CounterAppTest.cc  InMemoryFakeVirtualLog.h
applications/mydb/: main.cc
applications/mydb/backend/: AddTableRowRequest.h  Bootstrap.h  Common.h  Db.cc  Db.h  DbDefaults.cc  DbDefaults.h  DbImpl.cc  DbImpl.h  Errors.h  KeySerializer.cc  KeySerializer.h  PartitionMap.h  QueryExecutor.cc  QueryExecutor.h  QueryOptions.h  QueryParser.cc  QueryParser.h  QueryPlan.h  QueryPlanner.cc  QueryPlanner.h  RequestTransformer.h  RocksDbFactory.h  RocksReaderWriter.cc  RocksReaderWriter.h  RowSerializer.h  SchemaStore.h  TableRow.cc  TableRow.h
applications/mydb/experimental/: Dfs.cc  Dfs.h  Models.h  WaitForGraph.cc  WaitForGraph.h
applications/mydb/format/: FormatTable.h
applications/mydb/include/: Db.h
applications/mydb/proto/: condition.proto
cmake/: backward.cmake  fmt.cmake  folly.cmake  gtest.cmake  openssl.cmake  prometheus.cmake  source_list.cmake  tabulate.cmake  test_files_list.cmake  uuid_generator.cmake
common/proto/: Common.proto
configs/: srv1_config.textproto  srv2_config.textproto  srv3_config.textproto  srv4_config.textproto  srv5_config.textproto
configs/applications/counter/: app1_config.textproto  app2_config.textproto  app3_config.textproto  app4_config.textproto  app5_config.textproto
docker/: base_image.dockerfile  conanfile.txt  counter_app.dockerfile  replicated_counter.dockerfile
impl/: InMemoryMetadataStore.cc  InMemoryMetadataStore.h  NanoLogStoreImpl.cc  NanoLogStoreImpl.h  ReplicaImpl.cc  ReplicaImpl.h  SequencerImpl.cc  SequencerImpl.h  VectorBasedNanoLog.cc  VectorBasedNanoLog.h  VirtualLogImpl.cc  VirtualLogImpl.h
impl/tests/: MetadataStoreTest.cc  MockReplica.h  ReplicaTest.cc  SequencerTest.cc  TestUtils.h  VectorBasedNanoLogTest.cc  VirtualLogTest.cc
include/: Common.h  MetadataStore.h  NanoLog.h  NanoLogStore.h  Replica.h  Sequencer.h  VirtualLog.h
log/: MetadataConfig.pb.cc  MetadataConfig.pb.h  default_options.textproto  main.cc
log/client/: MetadataStoreClient.cc  MetadataStoreClient.h  ReplicaClient.cc  ReplicaClient.h  SequencerClient.cc  SequencerClient.h
log/impl/: Ensemble.h  EnsembleConfig.h  EnsembleNode.h  FailureDetectorImpl.cc  FailureDetectorImpl.h  InMemoryMetadataStore.cc  InMemoryMetadataStore.h  InMemoryNanoLog.cc  InMemoryNanoLog.h  NanoLogFactory.h  NanoLogStoreImpl.cc  NanoLogStoreImpl.h  NullSequencer.h  PersistentMetadataStore.h  RegistryImpl.cc  RegistryImpl.h  RemoteMetadataStore.h  RemoteReplica.h  RemoteSequencer.h  ReplicaImpl.cc  ReplicaImpl.h  RocksNanoLog.cc  RocksNanoLog.h  RocksReplica.cc  RocksReplica.h  SequencerImpl.cc  SequencerImpl.h  VectorBasedNanoLog.cc  VectorBasedNanoLog.h  VirtualLogFactory.cc  VirtualLogFactory.h  VirtualLogImpl.cc  VirtualLogImpl.h
log/impl/tests/: MetadataStoreTest.cc  MockReplica.h  NanoLogTests.cc  ReplicaTest.cc  SequencerTest.cc  TestUtils.h  VectorBasedNanoLogTest.cc  VirtualLogTest.cc
log/include/: Common.h  DurableLog.h  FailureDetector.h  HealthCheck.h  MetadataStore.h  NanoLog.h  NanoLogStore.h  Registry.h  Replica.h  Sequencer.h  VirtualLog.h
log/pipe/: ChecksumDecorator.cc  ChecksumDecorator.h  LogPipe.h  LogReaderWriter.h  ShardedLogDecorator.cc  ShardedLogDecorator.h
log/pipe/proto/: ChecksumProtectedLogEntry.proto  ShardedLogEntry.proto
log/proto/: LogEntry.proto  MetadataConfig.proto  Options.proto
log/server/: AdminServer.cc  AdminServer.h  LogServer.h  MetadataServer.cc  MetadataServer.h  ReplicaServer.cc  ReplicaServer.h  RunServer.h  SequencerServer.cc  SequencerServer.h
log/server/proto/: Admin.proto  Common.proto  Replica.proto  (+3 more)
log/utils/: FlatMapSequential.h  FutureUtils.h  GrpcServerFactory.h  OrderedCompletionQueue.h  UuidGenerator.h
metadata/: main.cc
metrics/: MetricsRegistry.h
persistence/: KVStoreLite.h  RocksDbFactory.h  RocksKVStoreLite.h  TransactionalRocksKVStoreLite.h
persistence/tests/: RocksTestFixture.h  TransactionalRocksKVStoreLiteTests.cc
proto/: CounterEntry.proto  MetadataConfig.proto
statemachine/: Common.h  ConflictDetector.h  Factory.h  LogTrimApplicator.h  LogTrimStateMachine.h  MetadataStoreApplicator.h  MetadataStoreStateMachine.h  NullStateMachine.h  RocksStateMachine.h  RocksTxnApplicator.h  SinkStateMachine.h  VirtualLogStateMachine.h
statemachine/include/: StateMachine.h
statemachine/proto/: RocksTxn.proto
statemachine/tests/: RocksStateMachineTests.cc  TestUtils.h  VirtualLogStateMachineTests.cc
utils/: FutureUtils.h  OrderedCompletionQueue.h
utils/tests/: FutureUtilsTest.cc  OrderedCompletionQueueTests.cc
wor/: KVStoreLite.h  RocksKVStoreLite.h  WORFactory.cc  WORFactory.h  WriteOnceRegisterChainAppender.h  WriteOnceRegisterChainImpl.h
wor/include/: WriteOnceRegister.h  WriteOnceRegisterChain.h
wor/inmemory/: InMemoryWriteOnceRegister.h  InMemoryWriteOnceRegisterChain.h
wor/paxos/: Common.cc  Common.h  LocalAcceptor.cc  LocalAcceptor.h  PaxosWriteOnceRegister.h  Proposer.h  ProposerImpl.h  RegistryImpl.h  RemoteAcceptor.h
wor/tests/: InMemoryWriteOnceRegisterTest.cc  WriteOnceRegisterChainAppenderTest.cc  WriteOnceRegisterTests.cc
(+44 files in other folders)
